fix(review): scan honours the anchor it is handed, and the reuse branch is tested
Two findings on my own fix.

The jar branch called fs.getPath(ANCHOR) rather than reading the entry
out of the URL, so it ignored its own argument while the folder branch
honoured it - the method quietly meant two different things depending on
packaging. The jar test passed only because its fixture happened to use
the same layout as the constant. Driven RED by putting the constant
back: a jar with recipes at another path reads 0.

And the FileSystems.getFileSystem branch had no test at all. That is the
branch that actually runs in the game, because NeoForge already holds the
mod jar open - so the covered half was the one that never executes in
production. It now asserts both that recipes come back and that scan does
not close a filesystem it did not open, which in game is NeoForge's own
handle.

An untested branch in a two-branch fix is the half that ships broken.
That is precisely how the original bug got here.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_018xhFdKWbutWhkWP1SEVNwE