@@ -5,8 +5,11 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.google.gson.JsonObject;
 import java.io.OutputStream;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.FileSystem;
+import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
@@ -64,7 +67,7 @@ class RecipeFilesJarTest {
     @DisplayName("recipes inside a jar are found, which is every install that is not a dev run")
     void readsFromInsideAJar(@TempDir Path dir) throws Exception {
         Path jar = buildJar(dir);
-        URL anchor = new URL("jar:" + jar.toUri() + "!/" + DIR + "mattress.json");
+        URL anchor = URI.create("jar:" + jar.toUri() + "!/" + DIR + "mattress.json").toURL();
 
         // Sanity first: if the anchor itself does not resolve, everything below passes vacuously
         // by finding the nothing it expected - the exact shape of the bug being guarded against.
@@ -101,5 +104,41 @@ class RecipeFilesJarTest {
 
         List<JsonObject> found = RecipeFiles.scan(recipes.resolve("mattress.json").toUri().toURL());
         assertEquals(2, found.size(), "the exploded-folder path is what dev runs use; got " + found);
+    }
+
+    @Test
+    @DisplayName("an already-open jar filesystem is reused, and not closed out from under its owner")
+    void reusesAnAlreadyOpenFilesystem(@TempDir Path dir) throws Exception {
+        Path jar = buildJar(dir);
+        URI uri = URI.create("jar:" + jar.toUri() + "!/" + DIR + "mattress.json");
+
+        // THE BRANCH THAT ACTUALLY RUNS IN THE GAME. NeoForge holds the mod jar open, so scan takes
+        // FileSystems.getFileSystem rather than opening its own - and the first version of this fix
+        // had that half completely untested. An untested branch in a two-branch fix is the half that
+        // ships broken, which is the whole reason the original bug existed.
+        try (FileSystem ours = FileSystems.newFileSystem(uri, java.util.Map.of())) {
+            List<JsonObject> found = RecipeFiles.scan(uri.toURL());
+            assertEquals(3, found.size(), "recipes should be read through the already-open filesystem");
+
+            assertTrue(ours.isOpen(),
+                "scan closed a filesystem it did not open. In game that is NeoForge's handle on the "
+                    + "mod jar, and every later read from it would fail.");
+        }
+    }
+
+    @Test
+    @DisplayName("the anchor's own path is used, not a hardcoded one")
+    void honoursTheAnchorItIsGiven(@TempDir Path dir) throws Exception {
+        // A jar whose recipes are NOT at the mod's usual path. The first fix called
+        // fs.getPath(ANCHOR) inside the jar branch, so it ignored its argument entirely and only
+        // passed because the fixture happened to match the constant.
+        Path jar = dir.resolve("elsewhere.jar");
+        try (OutputStream out = Files.newOutputStream(jar);
+                JarOutputStream jos = new JarOutputStream(out)) {
+            write(jos, "data/otherpack/recipe/thing.json", "{\"type\":\"recompile:teardown\"}");
+        }
+        URI uri = URI.create("jar:" + jar.toUri() + "!/data/otherpack/recipe/thing.json");
+        assertEquals(1, RecipeFiles.scan(uri.toURL()).size(),
+            "scan must read beside the anchor it was handed, wherever that is");
     }
 }
